Fix layout of about/logout on small screens

--- a/demo/demo.less
+++ b/demo/demo.less
@@ -120,19 +120,20 @@ body, html
 
     > #about
     {
-      position: absolute;
-      top: 20px;
-      left: 30px;
-
+      float: left;
+      margin-top: 20px;
+      margin-left: 20px;
+    }
       color: inherit;
       text-decoration: none;
     }
 
     > #logout
     {
-      position: absolute;
-      top: 20px;
-      right: 30px;
+      float: right;
+      margin-top: 20px;
+      margin-right: 20px;
+
       cursor: pointer;
       display: none;
     }
@@ -154,6 +155,7 @@ body, html
 #mainTitle
 {
   text-align: center;
+  margin: 15px;
 }
 
 #loginLocks
